# Braille_translat_learner

./: .flutter-plugins  .flutter-plugins-dependencies  README.md  launch.json  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
TradutorBrailleBD-main/TradutorBrailleBD-main/: README.md  pyproject.toml
TradutorBrailleBD-main/TradutorBrailleBD-main/legacy/: braille.py  dicionario.py  geragride.py
TradutorBrailleBD-main/TradutorBrailleBD-main/src/: app.py
TradutorBrailleBD-main/TradutorBrailleBD-main/src/services/: braille.py
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m
lib/: home.dart  main.dart
lib/materials/: constants.dart  my_buttons.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/ephemeral/.plugin_symlinks/: file_selector_linux  image_picker_linux  path_provider_linux
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
tratamento_imagem-main/tratamento_imagem-main/: alinhar.py  bdLetra.py  deenhar_centroids.py  grade.py  main.py  process_grid.py  teste.py  teste2.py  transformar.py  vcol.py  vect_centroid.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
